# ai-learning-support

./: .env.example  AGENTS.md  AILearnNurse.jsx  Agent.md  BACKEND_API_REFERENCE.md  Dockerfile  README.md  UI_Webapp.txt  app.py  desktop.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  services.py  test.py
.claude/: settings.json  settings.local.json
Health_Hack_2026/: AILearnNurse_2.jsx
static/: styles.css
templates/: ai_professor.html  base.html  course_detail.html  courses.html  dashboard_student.html  dashboard_teacher.html  fall_blutdruck.html  gamification.html  index.html  ki_lehrer.html  kip_dashboard.html  language_test.html  learning.html  login.html  module_detail.html  nursing_test.html  quiz.html  quiz_result.html  register.html  student_progress.html  teacher_course.html  upload_course.html
venv`/: pyvenv.cfg
venv`/Scripts/: activate  activate.bat
