[project]
name = "ai-learning-support"
version = "0.1.0"
description = "Flask-based AI Learning Support UI for nursing education"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "flask==3.0.0",
    "flask-sqlalchemy==3.1.1",
    "google-genai>=1.0.0",
    "openai>=2.32.0",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
    "sqlalchemy==2.0.41",
    "werkzeug==3.0.0",
]

[project.optional-dependencies]
audio-test = [
    "pyaudio>=0.2.14",
]
